[package]
name = "fsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
lazy_static = "1.4.0"
regex = "1.9.4"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
tide = "0.16.0"
